# delegate

./: .clang-format  .gitignore  Doxyfile  Doxyfile.json  build_docs.py  index.md  meson.build  meson_options.txt  readme.in.md  readme.in.md.temp  readme.md
docs/: annotated.html  build_docs.bat  build_docs.sh  classes.html  classpc_1_1delegate_3_01_ret_07_args_8_8_8_08_4-members.html  classpc_1_1delegate_3_01_ret_07_args_8_8_8_08_4.html  classpc_1_1multicast__delegate_3_01_ret_07_args_8_8_8_08_4-members.html  classpc_1_1multicast__delegate_3_01_ret_07_args_8_8_8_08_4.html  delegate_8hpp.html  delegate_8hpp__dep__incl.map  delegate_8hpp__dep__incl.md5  delegate_8hpp__incl.map  delegate_8hpp__incl.md5  delegate_8hpp_source.html  delegate__example_8cpp.html  delegate__example_8cpp__incl.map  delegate__example_8cpp__incl.md5  delegate__example_8cpp_source.html  delegate_example_8cpp-example.html  dir_000000_000001.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  menudata.js  multicast__delegate_8hpp.html  multicast__delegate_8hpp__dep__incl.map  multicast__delegate_8hpp__dep__incl.md5  multicast__delegate_8hpp__incl.map  multicast__delegate_8hpp__incl.md5  multicast__delegate_8hpp_source.html  (+28 more)
docs/html/: class_big_functor-members.html  class_big_functor.html  classes.html  classpc_1_1delegate.html  classpc_1_1multicast__delegate.html  delegate_8hpp.html  delegate_8hpp__dep__incl.map  delegate_8hpp__dep__incl.md5  delegate__example_8cpp__incl.md5  delegate__example_8cpp_source.html  dir_000000_000001.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  multicast__delegate_8hpp__incl.map  multicast__delegate__example_8cpp__incl.md5  namespacemembers_vars.html  struct_f-members.html  struct_f.html  struct_functor-members.html  struct_functor.html  struct_small_functor-members.html  struct_small_functor.html  structpc_1_1impl_1_1ret__val.html  structpc_1_1impl_1_1ret__val_3_01_ret_01_6_01_4.html  structpc_1_1impl_1_1ret__val_3_01_ret_01_6_6_01_4-members.html  structpc_1_1impl_1_1value__collector_3_01void_01_4.html  structpc_1_1impl_1_1vtable-members.html
docs/html/search/: all_2.js  classes_5.js  classes_6.js  files_1.js  typedefs_5.js  variables_0.js  variables_3.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  (+9 more)
doxybook/: config.json  postfix.txt  replacement.txt
doxybook/templates/: class_members_tables.tmpl  kind_class.tmpl  member_details.tmpl  nonclass_members_tables.tmpl
examples/: delegate_example.cpp  multicast_delegate.cpp  multicast_delegate_example.cpp
html/: classpc_1_1delegate_3_01_ret_07_args_8_8_8_08_4.html  classpc_1_1multicast__delegate_3_01_ret_07_args_8_8_8_08_4.html  delegate_8hpp__incl.map  delegate_8hpp__incl.md5  delegate_8hpp_source.html  delegate__example_8cpp.html  delegate__example_8cpp__incl.map  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  multicast__delegate_8hpp.html  multicast__delegate_8hpp__dep__incl.map  multicast__delegate_8hpp__dep__incl.md5  multicast__delegate_8hpp__incl.md5  multicast__delegate_8hpp_source.html  multicast__delegate__example_8cpp.html  multicast__delegate__example_8cpp__incl.map  multicast__delegate__example_8cpp_source.html  namespacemembers_type.html  namespacepc_1_1impl.html  readme_8md.html  structpc_1_1impl_1_1const__mfn__holder__t.html  structpc_1_1impl_1_1mfn__holder__t.html  structpc_1_1impl_1_1ret__val_3_01_ret_01_6_6_01_4.html  structpc_1_1impl_1_1value__collector.html  structpc_1_1impl_1_1vtable.html
html/search/: all_3.js  all_5.js  classes_1.js  files_0.js  functions_4.js  functions_6.js  pages_0.js  typedefs_2.js
include/: delegate.hpp  multicast_delegate.hpp
markdown_docs/: classpc_1_1delegate_3_01_ret_07_args_8_8_8_08_4.md  classpc_1_1multicast__delegate_3_01_ret_07_args_8_8_8_08_4.md  delegate_8hpp.md  delegate__example_8cpp.md  delegate_example_8cpp-example.md  dir_d28a4824dc47e487b107a5db32ef43c4.md  dir_d44c64559bbebec7f509842c48db8b23.md  index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md  indexpage.md  md__c___users_pelec__one_drive__dokumente__programming__c___libs_delegate_readme.md  md__c___users_pelec__one_drive__dokumente__programming__c___libs_delegate_readme_in.md  multicast__delegate_8hpp.md  multicast__delegate__example_8cpp.md  multicast_delegate_example_8cpp-example.md  namespacepc.md  namespacepc_1_1impl.md  namespacestd.md  readme_8in_8md.md  readme_8in_8md_8temp.md  readme_8in__temp_8md.md  readme_8md.md  structpc_1_1impl_1_1const__mfn__holder__t.md  structpc_1_1impl_1_1mfn__holder__t.md  structpc_1_1impl_1_1ret__val.md  structpc_1_1impl_1_1ret__val_3_01_ret_01_6_01_4.md  structpc_1_1impl_1_1ret__val_3_01_ret_01_6_6_01_4.md  structpc_1_1impl_1_1value__collector.md  structpc_1_1impl_1_1value__collector_3_01void_01_4.md  structpc_1_1impl_1_1vtable.md
tests/: delegate.t.cpp  multicast_delegate.t.cpp  r_value_ref_test.cpp
