option('build_docs', type:'feature',value:'disabled', description:'meson will build the docs for this project.')
option('doxy_dir_path', type : 'string', value : '', description : 'Path to doxygen bin directory, e.g. \'C:\Program Files\doxygen\bin\' or similar. Leave empty if you have doxygen available in your path')
