option('build_docs',  type : 'feature', value:'disabled', description: 'Documentation for this project will be built if set to enabled.')
option('doxy_exe',    type : 'string',  value : '',       description : 'Full path to doxygen binary, e.g. \'C:/Program Files/doxygen/bin/doxygen.exe\' or similar. Leave empty if you have doxygen available in your path')
